--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-
+  flutter_dotenv: ^5.0.2
   http: ^1.2.2 # Aggiungi questa riga per usare la versione più recente del pacchetto http
 
 dev_dependencies:
